{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 55,
  "lineage": "61bd5dae-1d02-1fbd-e162-18cc870c1ce5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c8f4cb86751d02f",
            "arn": "arn:aws:ec2:eu-north-1:290768402831:elastic-ip/eipalloc-07c8f4cb86751d02f",
            "association_id": "eipassoc-0bc8f4e080eb77961",
            "domain": "vpc",
            "id": "eipalloc-07c8f4cb86751d02f",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0b96bbd5f80fb8821",
            "private_dns": "ip-10-0-101-94.eu-north-1.compute.internal",
            "private_ip": "10.0.101.94",
            "public_dns": "ec2-13-48-12-21.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.48.12.21",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-nat-eip-1",
              "Project": "eks-upgrade-lab"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-nat-eip-1",
              "Project": "eks-upgrade-lab"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e453ed25af6cf021",
            "arn": "arn:aws:ec2:eu-north-1:290768402831:elastic-ip/eipalloc-0e453ed25af6cf021",
            "association_id": "eipassoc-048550884654c5f74",
            "domain": "vpc",
            "id": "eipalloc-0e453ed25af6cf021",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-05cec6db69fce5eab",
            "private_dns": "ip-10-0-102-168.eu-north-1.compute.internal",
            "private_ip": "10.0.102.168",
            "public_dns": "ec2-13-63-142-93.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.63.142.93",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-nat-eip-2",
              "Project": "eks-upgrade-lab"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-nat-eip-2",
              "Project": "eks-upgrade-lab"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08cd61d247213fdec",
            "arn": "arn:aws:ec2:eu-north-1:290768402831:elastic-ip/eipalloc-08cd61d247213fdec",
            "association_id": "eipassoc-0ed2c80773c7a3440",
            "domain": "vpc",
            "id": "eipalloc-08cd61d247213fdec",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0d55601fe8c209acb",
            "private_dns": "ip-10-0-103-92.eu-north-1.compute.internal",
            "private_ip": "10.0.103.92",
            "public_dns": "ec2-16-192-24-89.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.192.24.89",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-nat-eip-3",
              "Project": "eks-upgrade-lab"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-nat-eip-3",
              "Project": "eks-upgrade-lab"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:290768402831:internet-gateway/igw-0d63aa4376ec671fb",
            "id": "igw-0d63aa4376ec671fb",
            "owner_id": "290768402831",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-igw",
              "Project": "eks-upgrade-lab"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-igw",
              "Project": "eks-upgrade-lab"
            },
            "vpc_id": "vpc-00beafd6db8af4b15"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c8f4cb86751d02f",
            "association_id": "eipassoc-0bc8f4e080eb77961",
            "connectivity_type": "public",
            "id": "nat-0ab359471616dfd8f",
            "network_interface_id": "eni-0b96bbd5f80fb8821",
            "private_ip": "10.0.101.94",
            "public_ip": "13.48.12.21",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-094a21a7d2064e1bf",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-nat-1",
              "Project": "eks-upgrade-lab"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-nat-1",
              "Project": "eks-upgrade-lab"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e453ed25af6cf021",
            "association_id": "eipassoc-048550884654c5f74",
            "connectivity_type": "public",
            "id": "nat-076d8802c758cb7f8",
            "network_interface_id": "eni-05cec6db69fce5eab",
            "private_ip": "10.0.102.168",
            "public_ip": "13.63.142.93",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d9114d83049f867e",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-nat-2",
              "Project": "eks-upgrade-lab"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-nat-2",
              "Project": "eks-upgrade-lab"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08cd61d247213fdec",
            "association_id": "eipassoc-0ed2c80773c7a3440",
            "connectivity_type": "public",
            "id": "nat-012829315e10a0298",
            "network_interface_id": "eni-0d55601fe8c209acb",
            "private_ip": "10.0.103.92",
            "public_ip": "16.192.24.89",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-067584d101b403f1b",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-nat-3",
              "Project": "eks-upgrade-lab"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-nat-3",
              "Project": "eks-upgrade-lab"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:290768402831:route-table/rtb-037c7ac12e3484a09",
            "id": "rtb-037c7ac12e3484a09",
            "owner_id": "290768402831",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ab359471616dfd8f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-private-rt-1",
              "Project": "eks-upgrade-lab"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-private-rt-1",
              "Project": "eks-upgrade-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-00beafd6db8af4b15"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:290768402831:route-table/rtb-0a098526591739d75",
            "id": "rtb-0a098526591739d75",
            "owner_id": "290768402831",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-076d8802c758cb7f8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-private-rt-2",
              "Project": "eks-upgrade-lab"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-private-rt-2",
              "Project": "eks-upgrade-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-00beafd6db8af4b15"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:290768402831:route-table/rtb-0e7fd4b86a026fe7c",
            "id": "rtb-0e7fd4b86a026fe7c",
            "owner_id": "290768402831",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-012829315e10a0298",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-private-rt-3",
              "Project": "eks-upgrade-lab"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-private-rt-3",
              "Project": "eks-upgrade-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-00beafd6db8af4b15"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:290768402831:route-table/rtb-0de713fda7c06eb9b",
            "id": "rtb-0de713fda7c06eb9b",
            "owner_id": "290768402831",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d63aa4376ec671fb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-public-rt",
              "Project": "eks-upgrade-lab"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-public-rt",
              "Project": "eks-upgrade-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-00beafd6db8af4b15"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d7d417f661bea61",
            "route_table_id": "rtb-037c7ac12e3484a09",
            "subnet_id": "subnet-04acb548d9f043384"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0775230cb91f180d5",
            "route_table_id": "rtb-0a098526591739d75",
            "subnet_id": "subnet-0c8079623169667a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b83f43078079f419",
            "route_table_id": "rtb-0e7fd4b86a026fe7c",
            "subnet_id": "subnet-039bf3dd0cec834dd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01518ccbcfa417edb",
            "route_table_id": "rtb-0de713fda7c06eb9b",
            "subnet_id": "subnet-094a21a7d2064e1bf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0d299cef7cf99bc",
            "route_table_id": "rtb-0de713fda7c06eb9b",
            "subnet_id": "subnet-0d9114d83049f867e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c5e2ae7150f4e94",
            "route_table_id": "rtb-0de713fda7c06eb9b",
            "subnet_id": "subnet-067584d101b403f1b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:290768402831:security-group/sg-0a02a18fa4375e4be",
            "description": "EKS cluster control-plane security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a02a18fa4375e4be",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow nodes to reach the API server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0532e260b52d67b26"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-upgrade-lab-cluster-sg",
            "name_prefix": "",
            "owner_id": "290768402831",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-cluster-sg",
              "Project": "eks-upgrade-lab"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-cluster-sg",
              "Project": "eks-upgrade-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-00beafd6db8af4b15"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:290768402831:security-group/sg-0532e260b52d67b26",
            "description": "EKS worker nodes security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0532e260b52d67b26",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all traffic between nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow control plane to communicate with nodes",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a02a18fa4375e4be"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "eks-upgrade-lab-nodes-sg",
            "name_prefix": "",
            "owner_id": "290768402831",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-nodes-sg",
              "Project": "eks-upgrade-lab"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-nodes-sg",
              "Project": "eks-upgrade-lab"
            },
            "timeouts": null,
            "vpc_id": "vpc-00beafd6db8af4b15"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to reach the API server",
            "from_port": 443,
            "id": "sgrule-4161126555",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a02a18fa4375e4be",
            "security_group_rule_id": "sgr-0206bd26bbbc7d925",
            "self": false,
            "source_security_group_id": "sg-0532e260b52d67b26",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.cluster",
            "aws_security_group.nodes",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:290768402831:subnet/subnet-04acb548d9f043384",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04acb548d9f043384",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "290768402831",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-private-1",
              "Project": "eks-upgrade-lab",
              "kubernetes.io/cluster/eks-upgrade-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-private-1",
              "Project": "eks-upgrade-lab",
              "kubernetes.io/cluster/eks-upgrade-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00beafd6db8af4b15"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:290768402831:subnet/subnet-0c8079623169667a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8079623169667a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "290768402831",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-private-2",
              "Project": "eks-upgrade-lab",
              "kubernetes.io/cluster/eks-upgrade-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-private-2",
              "Project": "eks-upgrade-lab",
              "kubernetes.io/cluster/eks-upgrade-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00beafd6db8af4b15"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:290768402831:subnet/subnet-039bf3dd0cec834dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039bf3dd0cec834dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "290768402831",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-private-3",
              "Project": "eks-upgrade-lab",
              "kubernetes.io/cluster/eks-upgrade-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-private-3",
              "Project": "eks-upgrade-lab",
              "kubernetes.io/cluster/eks-upgrade-lab": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00beafd6db8af4b15"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:290768402831:subnet/subnet-094a21a7d2064e1bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094a21a7d2064e1bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "290768402831",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-public-1",
              "Project": "eks-upgrade-lab",
              "kubernetes.io/cluster/eks-upgrade-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-public-1",
              "Project": "eks-upgrade-lab",
              "kubernetes.io/cluster/eks-upgrade-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00beafd6db8af4b15"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:290768402831:subnet/subnet-0d9114d83049f867e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9114d83049f867e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "290768402831",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-public-2",
              "Project": "eks-upgrade-lab",
              "kubernetes.io/cluster/eks-upgrade-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-public-2",
              "Project": "eks-upgrade-lab",
              "kubernetes.io/cluster/eks-upgrade-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00beafd6db8af4b15"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:290768402831:subnet/subnet-067584d101b403f1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067584d101b403f1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "290768402831",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-public-3",
              "Project": "eks-upgrade-lab",
              "kubernetes.io/cluster/eks-upgrade-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-public-3",
              "Project": "eks-upgrade-lab",
              "kubernetes.io/cluster/eks-upgrade-lab": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00beafd6db8af4b15"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:290768402831:vpc/vpc-00beafd6db8af4b15",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fc23309df95fd615",
            "default_route_table_id": "rtb-0be975d6b5fb986c2",
            "default_security_group_id": "sg-0875ef02a44ab629a",
            "dhcp_options_id": "dopt-048eddf5a71fb2ac0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00beafd6db8af4b15",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0be975d6b5fb986c2",
            "owner_id": "290768402831",
            "tags": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-vpc",
              "Project": "eks-upgrade-lab"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "eks-upgrade-lab-vpc",
              "Project": "eks-upgrade-lab"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}